--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2386C4;
+  background-color: rgba( 35 , 134 , 196 , 1 );
   color: white;
   margin: 0;
 }
@@ -11,10 +11,9 @@ footer {
 
 h1 {
   border-radius: 5px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
-  padding: 20px;
   text-align: center;
 }
 
@@ -79,7 +78,7 @@ h1 {
 }
 
 .item .item__add {
-  background-color: #E07A5F;
+  background-color: rgba( 224 , 122 , 95 , 1 );
   border: 0;
   color: white;
   cursor: pointer;
@@ -101,7 +100,7 @@ h1 {
 
 .cart .cart__title {
   flex-basis: 1;
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 25pt;
   font-weight: 700;
   margin: 20px;
@@ -123,7 +122,7 @@ h1 {
 }
 
 .empty-cart {
-  background-color: #E07A5F;
+  background-color: rgba( 224 , 122 , 95 , 1 );
   border-radius: 10px;
   border-style: none;
   color: white;
@@ -140,7 +139,7 @@ h1 {
 }
 
 .total-prc {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Open Sans, sans-serif;
   font-weight: 700;
   text-align: center;
 }
@@ -159,7 +158,7 @@ h1 {
 }
 
 .input-btn {
-  background-color: #E07A5F;
+  background-color: rgba( 224 , 122 , 95 , 1 );
   border-radius: 10px;
   border-style: none;
   color: white;
