--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 
 .item {
-  border: 2px solid blue;
+  border: 2px solid rgb(14, 14, 14);
   border-radius: 5px;
   box-sizing: border-box;
   display: flex;
@@ -56,7 +56,7 @@
 }
 
 .item .item__add {
-  background-color: green;
+  background-color: rgb(4, 243, 4);
   border: 0;
   cursor: pointer;
   margin: 0;
@@ -65,12 +65,53 @@
 
 .cart {
   display: flex;
+  border: 1px solid black;
+  border-radius: 10px;
   flex-basis: 30%;
   flex-flow: column wrap;
+}
+
+.empty-cart {
+  background: rgb(255, 75, 75);
+  border-radius: 8px;
+  font-size: 20px;
+  height: 30px;
+  margin-left: 30px;
 }
 
 .cart .cart__title {
   flex-basis: 1;
   font-size: 16pt;
+  margin: 20px;
   text-align: center;
+}
+
+.cart__item {
+  border: 1px solid rgb(14, 14, 14);
+  border-radius: 8px;
+  list-style: none;
+  margin: 10px 0;
+  margin-right: 35px;
+  padding: 5px;
+}
+
+.cart__item:hover {
+  background: rgb(255, 174, 174);
+}
+
+.total-carrinho {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+strong {
+  margin-right: 10px;
+}
+
+.preco {
+  display: flex;
+  align-items: baseline;
 }
