--- a/style.css
+++ b/style.css
@@ -113,3 +113,85 @@ input {
   font-size: 16pt;
   text-align: center;
 }
+
+.tease-container {
+  position: relative;
+}
+
+.cart__items {
+  animation: tease-items 500ms alternate-reverse infinite paused;
+  margin: 0;
+  transform-origin: top;
+}
+
+.cart__item:hover {
+  background-color: seagreen;
+  cursor: pointer;
+}
+
+hr {
+  background-color: red;
+  height: 1em;
+  margin: 0;
+}
+
+.arrow-content {
+  background-color: rgb( 171, 171, 171 );
+  display: flex;
+  flex-flow: column wrap;
+  height: 2em;
+  top: 10%;
+}
+
+.arrow-container {
+  align-self: center;
+  top: 0;
+  width: 100%;
+}
+
+.fa-caret-down {
+  align-self: center;
+  animation: tease-arrow 500ms alternate-reverse infinite paused;
+  font-size: 2em;
+  position: relative;
+}
+
+.fa-caret-down:hover {
+  cursor: pointer;
+}
+
+@keyframes tease-arrow {
+
+  0% {
+    transform: rotateX( 0 );
+  }
+
+  100% {
+    transform: rotateX( 180deg );
+  }
+}
+
+@keyframes tease-items {
+
+  0% {
+    height: auto;
+    transform: scaleY( 100% );
+  }
+
+  75% {
+    height: auto;
+    transform: scaleY( 0 );
+  }
+
+  100% {
+    height: 0;
+    transform: scaleY( 0 );
+  }
+}
+
+footer {
+  background-color: rgb(255, 128, 128);
+  display: flex;
+  justify-content: space-around;
+  height: 25vh;
+}
