--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .search {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding-bottom: 15px;
   width: 80%;
 }
 
@@ -104,4 +104,5 @@ body {
 
 li:hover {
   background-color: cornflowerblue;
+  border: 1px solid darkblue;
 }
