--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   align-items: center;
   display: flex;
   justify-content: space-around;
+  margin-top: 25px;
   width: 100%;
 }
 
@@ -73,5 +74,7 @@
 .cart .cart__title {
   flex-basis: 1;
   font-size: 16pt;
+  font-family: arial;
+  margin-bottom: 15px;
   text-align: center;
 }
