--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
 .cart .cart__title {
   flex-basis: 1;
   font-size: 16pt;
-  font-family: arial;
+  font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 15px;
   text-align: center;
 }
