--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 }
 
 .item .item__add {
-  background-color: green;
+  background-color: rgb(74, 93, 212);
   border: 0;
   cursor: pointer;
   margin: 0;
