--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 .item {
   border: 2px solid blue;
   border-radius: 5px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -56,7 +57,7 @@
 }
 
 .item .item__add {
-  background-color: rgb( 74 , 93 , 212 );
+  background-color: rgb(74, 93, 212);
   border: 0;
   cursor: pointer;
   margin: 0;
@@ -70,7 +71,11 @@
 }
 
 .cart .cart__title {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   flex-basis: 1;
-  font-size: 16pt;
+  font-size: 20pt;
+  font-weight: 600;
+  margin: 0;
+  padding: 10px;
   text-align: center;
 }
