adicionada style da classe .empty-car

--- a/style.css
+++ b/style.css
@@ -79,3 +79,8 @@
   padding: 10px;
   text-align: center;
 }
+
+.empty-cart {
+  box-shadow: 0 10px 20px rgba( 0 , 0 , 0 , 0.19 ), 0 6px 6px rgba( 0 , 0 , 0 , 0.23 );
+  margin-top: 20px;
+}
