--- a/style.css
+++ b/style.css
@@ -74,3 +74,21 @@
   font-size: 16pt;
   text-align: center;
 }
+
+.loading {
+  color: black;
+  font-size: 50px;
+}
+
+.cabecalho{
+  align-items: center;
+  background-color: cornflowerblue;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  text-align: center; 
+}
+
+.cart__item{
+  text-align: center;
+}
