--- a/style.css
+++ b/style.css
@@ -108,8 +108,16 @@ h1 {
 }
 
 .loading {
-  color: red;
-  font-size: 100px;
+  animation: spin 1s linear infinite;
+  border: 8px solid rgba( 224 , 122 , 95 , 1 );
+  border-left-color: rgb(221, 153, 135);
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+@keyframes spin {
+  to {transform: rotate(360deg);}
 }
 
 .header {
@@ -165,4 +173,10 @@ h1 {
   font-size: 16px;
   font-weight: 780;
   padding: 15px;
+}
+
+.cart__items {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
