--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@
 }
 
 .cart .cart__title {
+  border: 2px black solid;
   box-shadow: 0 10px 20px rgba( 0 , 0 , 0 , 0.19 ), 0 6px 6px rgba( 0 , 0 , 0 , 0.23 );
   flex-basis: 1;
   font-size: 20pt;
@@ -80,7 +81,14 @@
   text-align: center;
 }
 
+.cart__subtitle {
+  box-shadow: 0 10px 20px rgba( 0 , 0 , 0 , 0.19 ), 0 6px 6px rgba( 0 , 0 , 0 , 0.23 );
+  border: 2px black solid;
+  margin-top: 20px;
+  padding: 20px;
+}
+
 .empty-cart {
   box-shadow: 0 10px 20px rgba( 0 , 0 , 0 , 0.19 ), 0 6px 6px rgba( 0 , 0 , 0 , 0.23 );
-  margin-top: 20px;
+  margin-top: 10px;
 }
