alterando estilzaçao da classe load

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 }
 
 .load {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, sans-serif;
   margin-top: 200px;
   text-align: center;
 }
