alterando classe load para loading

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
   text-align: center;
 }
 
-.load {
+.loading {
   font-family: Impact, Haettenschweiler, sans-serif;
   margin-top: 200px;
   text-align: center;
